Bug Fixes & Improvements

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
 
-    <h1>Video here </h1>
+    <h1>Video here - </h1>
 
     <video id="video-player" width="650" controls autoplay>
-        <source src="http://localhost:3001/users/more.mkv" />
+        <source src="http://localhost:3001/users/more"  type="video/mkv" />
     </video>
 
 </body>
