--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <h1>Video here -</h1>
 
-    <h1>Video here - </h1>
-
-    <video id="video-player" width="650" controls autoplay>
-        <source src="http://localhost:3001/users/more"  type="video/mkv" />
+    <video id="video-player" width="650" controls>
+      <source src="http://localhost:3001/users/more.mp4" type="video/mp4" />
+      <!-- <source
+        src="https://zb10-7gsop1v78.bitchute.com/TVxGHamWd4e7/taAIR7DaOv97.mp4"
+        type="video/mp4"
+      /> -->
     </video>
-
-</body>
-
+  </body>
 </html>
