--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
     <h1>Video here -</h1>
 
     <video id="video-player" width="650" controls>
-      <source src="http://localhost:3001/users/more.mp4" type="video/mp4" />
+      <source id="video-player-source" src="" type="video/mp4" />
       <!-- <source
         src="https://zb10-7gsop1v78.bitchute.com/TVxGHamWd4e7/taAIR7DaOv97.mp4"
         type="video/mp4"
       /> -->
+      <script>
+        var link =
+          "http://localhost:3001/watch/stream?mglink=" +
+          encodeURIComponent(
+            "magnet:?xt=urn:btih:25AA732E39DB228AA7989EE66CC487C914AEBF40&dn=Captain%20America%20The%20First%20Avenger%20(2011)%201080p%20BrRip%20x264-%20YIFY&tr=udp%3A%2F%2F185.193.125.139%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fmovies.zsw.ca%3A6969%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.0x.tf%3A6969%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.tiny-vps.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce"
+          );
+
+        var element = document.getElementById("video-player-source");
+        element.src = link;
+        // element.
+      </script>
     </video>
   </body>
 </html>
